fixed social logos cutting off in footer

--- a/assets/styles/partials/_site-footer.scss
+++ b/assets/styles/partials/_site-footer.scss
@@ -164,7 +164,7 @@
 
         > li{
             display:inline-block;
-            width:15px;
+            width:20px;
             height:40px;
             margin-right:10px;
             > a{
