--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7835,7 +7835,7 @@ span.leadsentence {
     padding: 0; }
     .site-footer .social-links > li {
       display: inline-block;
-      width: 15px;
+      width: 20px;
       height: 40px;
       margin-right: 10px; }
       .site-footer .social-links > li > a {
